# test-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/executor/: cli.py  client.py  logging_utils.py  runner.py  state.py
apps/executor/adapters/: __init__.py  input.py  screen.py  window.py
apps/planner_api/: __init__.py  __main__.py  logging_utils.py  main.py  service.py  session_store.py
apps/planner_api/providers/: __init__.py  base.py  cloud_vlm.py
desktop-agent/: .env.example  README.md  electron-builder.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts
desktop-agent/docs/: semantic-automation.md
desktop-agent/scripts/: bootstrap-sidecar.ps1
desktop-agent/sidecar/: requirements.txt  uia_service.py
desktop-agent/src/main/: index.ts  vendor.d.ts
desktop-agent/src/main/database/: index.ts
desktop-agent/src/main/ipc/: handlers.ts
desktop-agent/src/main/services/: actionExecutor.ts  actionNormalizer.ts  aiAgent.ts  browserPolicy.ts  intentParser.ts  safetyLayer.ts  screenCapture.ts  semanticExecutor.ts  taskScheduler.ts  voiceService.ts
desktop-agent/src/main/windows/: chatPanel.ts  dashboard.ts  taskEditor.ts
desktop-agent/src/preload/: index.ts
desktop-agent/src/renderer/: App.tsx  env.d.ts
desktop-agent/src/shared/: constants.ts  types.ts  utils.ts
tests/e2e/: test_mock_harness.py
tests/fixtures/: sample_data.py
tests/integration/: test_planner_api.py  test_provider_timeout.py
tests/unit/: test_contracts.py  test_policy.py
(+28 files in other folders)
